Upgrade the system